--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,6 +12,6 @@ layout: default
 
 </article>
 
-<div class="page-navigation code">
+<!-- <div class="page-navigation code">
 	<a class="home" href="{{ "/" | prepend: site.baseurl | prepend: site.url }}" title="Back to Index">&larr; Index</a>
-</div>
+</div> -->
